# LearnOpenGL

./: .gitignore  CMakeLists.txt  README.md
cmake/modules/: FindASSIMP.cmake  FindGLFW3.cmake  FindGLM.cmake
configuration/: visualstudio.vcxproj.user.in
includes/learnopengl/: camera.h  filesystem.h  mesh.h  model.h  shader.h  shader_m.h  shader_s.h
lib/: glfw3.lib
src/1.getting_started/1.1.hello_window/: hello_window.cpp
src/1.getting_started/1.2.hello_window_clear/: hello_window_clear.cpp
src/1.getting_started/2.1.hello_triangle/: hello_triangle.cpp
src/1.getting_started/2.2.hello_triangle_indexed/: hello_triangle_indexed.cpp
src/1.getting_started/2.3.hello_triangle_exercise1/: hello_triangle_exercise1.cpp
src/1.getting_started/2.4.hello_triangle_exercise2/: hello_triangle_exercise2.cpp
src/1.getting_started/2.5.hello_triangle_exercise3/: hello_triangle_exercise3.cpp
src/1.getting_started/3.1.shader_uniform/: shader_uniform.cpp
src/1.getting_started/3.2.shader_interpolation/: shader_interpolation.cpp
src/1.getting_started/3.2.shaders_interpolation/: shaders_interpolation.cpp
src/1.getting_started/3.3.shader_class/: 3.3.shader.frag  3.3.shader.vert  shader_class.cpp
src/1.getting_started/3.3.shaders_class/: shaders_class.cpp
src/1.getting_started/3.4.shader_exercise1/: 3.4.shader.vert  shader_exercise1.cpp
src/1.getting_started/3.5.shader_exercise2/: 3.5.shader.vert  shader_exercise2.cpp
src/1.getting_started/3.6.shader_exercise3/: 3.6.shader.frag  3.6.shader.vert  shader_exercise3.cpp
src/1.getting_started/4.1.texture/: 4.1.texture.frag  4.1.texture.vert  texture.cpp
src/1.getting_started/4.1.textures/: 4.1.texture.fs  textures.cpp
src/1.getting_started/4.2.texture_combined/: 4.2.texture.frag  4.2.texture.vert  texture_combined.cpp
src/1.getting_started/4.2.textures_combined/: 4.2.texture.fs  textures_combined.cpp  textures_conbined.cpp
src/1.getting_started/4.3.texture_exercise1/: texture_exercise1.cpp
src/1.getting_started/4.3.textures_exercise2/: textures_exercise2.cpp
src/1.getting_started/4.4.texture_exercise2/: texture_exercise2.cpp
src/1.getting_started/4.4.textures_exercise3/: 4.4.texture.fs  textures_exercise3.cpp
src/1.getting_started/4.5.texture_exercise3/: 4.5.texture.frag  4.5.texture_exercise3.cpp
src/1.getting_started/4.5.textures_exercise4/: 4.5.texture.fs  textures_exercise4.cpp
src/1.getting_started/4.6.texture_exercise4/: 4.6.texture.frag  texture_exercise4.cpp
src/1.getting_started/5.1.transformations/: tansformations.cpp  transformations.cpp
src/1.getting_started/5.2.transformations_exercise1/: 5.2.shader.vert  tansformations_exercise1.cpp
src/1.getting_started/5.2.transformations_exercise2/: 5.2.transform.vs  transformations_exercise2.cpp
src/1.getting_started/5.3.transformations_exercise2/: 5.3.shader.frag  tansformations_exercise2.cpp
src/1.getting_started/6.1.coordinate_systems/: 6.1.coordinate_system.frag  6.1.coordinate_system.vert  coordinate_systems.cpp
src/1.getting_started/6.2.coordinate_systems_depth/: coordinate_systems_depth.cpp
src/1.getting_started/6.3.coordinate_systems_multiple/: 6.3.coordinate_system.cpp  6.3.coordinate_systems.fs  6.3.coordinate_systems.vs  coordinate_systems_multiple.cpp
src/1.getting_started/7.1.camera_circle/: 7.1.camera.vs  camera_circle.cpp
src/1.getting_started/7.2.camera_keyboard/: camera_keyboard.cpp
src/1.getting_started/7.2.camera_keyboard_dt/: camera_keyboard_dt.cpp
src/1.getting_started/7.3.camera_mouse_zoom/: camera_mouse_zoom.cpp
src/1.getting_started/7.4.camera_class/: camera_class.cpp
src/1.getting_started/7.5.camera_exercise1/: camera_exercise1.cpp
src/1.getting_started/7.6.camera_exercise2/: camera_exercise2.cpp
src/2.lighting/1.color/: 1.color.frag  color.cpp
src/2.lighting/1.colors/: colors.cpp
src/2.lighting/2.1.basic_lighting_diffuse/: 2.1.basic_lighting.frag  2.1.basic_lighting.vert  basic_lighting_diffuse.cpp
src/2.lighting/2.2.basic_lighting_specular/: basic_lighting_specular.cpp
src/2.lighting/2.3.basic_lighting_exercise1/: 2.3.basic_lighting.frag  basic_lighting_exercise1.cpp
src/2.lighting/2.4.basic_lighting_exercise2/: 2.4.basic_lighting.frag  2.4.basic_lighting.vert  basic_lighting_exercise2.cpp
src/2.lighting/2.5.basic_lighting_exercise3/: 2.5.basic_lighting.frag  2.5.basic_lighting.vert  2.5.light_cube.vert  basic_lighting_exercise3.cpp
src/2.lighting/3.1.materials/: 3.1.materials.frag  3.1.materials.vert  materials.cpp
src/2.lighting/3.2.material_exercise1/: materials_exercise1.cpp
src/2.lighting/4.1.lighting_maps_diffuse_map/: 4.1.lighting_maps.frag  lighting_maps_diffuse_map.cpp
src/2.lighting/4.2.lighting_maps_specular_map/: 4.2.lighting_maps.frag  lighting_maps_specular_map.cpp
src/2.lighting/4.3.lighting_maps_exercise2/: 4.3.lighting_maps.frag  lighting_maps_exercise2.cpp
src/2.lighting/4.4.lighting_maps_exercise3/: lighting_maps_exercise3.cpp
src/2.lighting/4.5.lighting_maps_exercise4/: 4.5.lighting_maps.frag  lighting_maps_exercise4.cpp
src/2.lighting/5.1.light_casters_directional/: 5.1.light_casters.frag  light_casters_directional.cpp
src/2.lighting/5.2.light_casters_point/: 5.2.light_casters.frag  5.2.light_casters.vert  light_casters_point.cpp
src/2.lighting/5.3.light_casters_spot/: 5.3.light_casters.frag  light_casters_spot.cpp
src/2.lighting/5.4.light_casters_spot_soft/: 5.4.light_casters.frag  light_casters_spot_soft.cpp
src/2.lighting/6.1.multiple_lights/: 6.1.multiple_lights.frag  multiple_lights.cpp
src/2.lighting/6.2.multiple_lights_exercise1/: multiple_lights_exercise1.cpp
src/3.model_loading/1.model_loading/: 1.model_loading.frag  1.model_loading.vert  model_loading.cpp
src/4.advanced_opengl/1.1.depth_testing/: depth_testing.cpp
src/4.advanced_opengl/1.2.depth_testing_view/: 1.2.depth_testing.frag  depth_testing_view.cpp
src/4.advanced_opengl/10.1.instancing_quads/: 10.1.instancing.vert  instancing_quad.cpp
src/4.advanced_opengl/10.2.instancing_array/: 10.2.instancing.frag  10.2.instancing.vert  instancing_array.cpp
(+40 files in other folders)
